--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,9 @@ input{
 }
 
 .container{
-   max-width: 1043px;
+   max-width: 1075px;
    margin: 0 auto;
-   /* padding: 0 16px; */
+   padding: 0 16px;
 }
 
 body{
@@ -47,8 +47,8 @@ body{
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
-   height: 650px;
-   margin-bottom: 60px;
+   min-height: 650px;
+   margin-bottom: 50px;
 }
 
 .header__inner{
@@ -60,7 +60,7 @@ body{
    display: flex;
    justify-content: space-between;
    align-items: center;
-   padding: 20px 0;
+   padding: 20px 16px;
 }
 
 .nav{
@@ -89,6 +89,22 @@ body{
    border-radius: 8px;
 }
 
+.menu__btn{
+   display: none;
+   width: 30px;
+   height: 20px;
+   margin: 14px 9px;
+   flex-direction: column;
+   justify-content: space-between;
+}
+
+.menu__btn span{
+   width: 30px;
+   height: 2px;
+   border-radius: 3px;
+   background-color: #fff;
+}
+
 .hero{
    text-align: center;
    color: #EEEEEE;
@@ -114,7 +130,7 @@ body{
 .hero__search{
    display: block;
    margin: 0 auto;
-   width: 600px;
+   width: 100%;
    padding: 16px 10px 15px 54px;
    border-radius: 8px;
    margin-bottom: 10px;
@@ -131,7 +147,7 @@ body{
 
 .hero__form{
    position: relative;
-   width: 600px;
+   max-width: 600px;
    margin: 0 auto;
    margin-bottom: 51px;
 }
@@ -152,6 +168,73 @@ body{
    font-weight: 400;
 }
 
+.hero__meta{
+   padding-bottom: 147px;
+}
+
 .hero__meta-link{
    text-decoration: underline;
+}
+
+
+
+
+
+@media (max-width: 768px){
+   .header{
+      margin-bottom: 40px;
+   }
+   .header__inner{
+      margin-bottom: 100px;
+   }
+   .nav{
+      display: none;
+   }
+   .menu__btn{
+      display: flex;
+   }
+   .header__inner .container{
+      margin-left: 60px;
+      margin-right: 60px;
+   }
+   .hero__meta{
+      padding-bottom: 125px;
+   }
+}
+
+@media (max-width: 480px){
+   .header__inner .container{
+      margin-left: 0px;
+      margin-right: 0px;
+   }
+}
+
+@media (max-width: 360px){
+   .header{
+      margin-bottom: 30px;
+   }
+   .header__inner{
+      margin-bottom: 56px;
+   }
+   .hero__title{
+      font-size: 20px;
+      font-weight: 600;
+      line-height: 150%;
+      letter-spacing: -0.4px;
+   }
+   .hero__desc{
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 138%;
+   }
+   .hero__search{
+      padding: 7px 10px 8px 46px;
+   }
+   .search__icon::before{
+      top: 10px;
+      left: 15px;
+   }
+   .hero__meta{
+      padding-bottom: 99px;
+   }
 }
