--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,6 @@ body{
    background-position: center center;
    background-size: cover;
    min-height: 650px;
-   margin-bottom: 50px;
 }
 
 .header__inner{
@@ -176,14 +175,41 @@ body{
    text-decoration: underline;
 }
 
+.partners{
+   padding: 50px 0 60px;
+   background-color: #FAFAFA;
+   margin-bottom: 80px;
+}
+
+.partners__title{
+   font-family: 'Poppins', sans-serif;
+   text-align: center;
+   font-size: 20px;
+   font-weight: 600;
+   line-height: 150%;
+   letter-spacing: -0.4px;
+   color: #020D37;
+   margin-bottom: 35px;
+}
+
+.partners__list{
+   display: flex;
+   justify-content: space-between;
+   gap: 40px;
+   align-content: center;
+   align-items: center;
+   flex-wrap: wrap;
+ }
+
+
+
+
+
 
 
 
 
 @media (max-width: 768px){
-   .header{
-      margin-bottom: 40px;
-   }
    .header__inner{
       margin-bottom: 100px;
    }
@@ -210,9 +236,6 @@ body{
 }
 
 @media (max-width: 360px){
-   .header{
-      margin-bottom: 30px;
-   }
    .header__inner{
       margin-bottom: 56px;
    }
