feat: add partners section adaptive

--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,6 @@ body{
 .partners__list{
    display: flex;
    justify-content: space-between;
-   gap: 40px;
    align-content: center;
    align-items: center;
    flex-wrap: wrap;
@@ -225,6 +224,13 @@ body{
    }
    .hero__meta{
       padding-bottom: 125px;
+   }
+   .partners{
+      padding: 40px 0;
+   }
+   .partners__list{
+      gap: 20px 70px;
+      justify-content: center;
    }
 }
 
@@ -259,5 +265,17 @@ body{
    }
    .hero__meta{
       padding-bottom: 99px;
+   }
+   .partners{
+      padding: 30px 0px 40px;
+   }
+   .partners__list{
+      gap: 20px;
+   }
+   .partners__title{
+      font-size: 18px;
+      font-weight: 600;
+      letter-spacing: -0.9px;
+      margin-bottom: 30px;
    }
 }
